--- a/Style.css
+++ b/Style.css
@@ -11,10 +11,49 @@
 }
 
 body {
-    background: var(--violet-ryb) url("./bg.png") fixed cover;
+    background: url('./bg.png') fixed;
+    height: 150vh;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.container {
+    width: 80%;
+    margin: auto;
+    padding: 5% 0;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+}
+
 h1 {
-    color: aqua;
+    color: var(--white);
+    font-weight: bold;
+    font-size: 50px;
+    margin-bottom: 0;
+}
+
+h6 {
+    color: var(--light-grey);
+    font-size: 40px;
+    font-weight: 400;
+    margin: 10%;
+}
+
+.startBtn {
+    color: var(--pink-lace);
+    font-size: 40px;
+    text-align: center;
+    background: transparent;
+    padding: 12px 30px;
+    border-radius: 50px;
+    border: 5px var(--pink-lace) solid;
+}
+
+.startBtn:hover {
+    cursor: pointer;
+}
+
+.startBtn:active {
+    background: rgba(255, 207, 250, 0.255);
 }
