--- a/Style.css
+++ b/Style.css
@@ -12,6 +12,7 @@
 
 body {
     background: url('./bg.png') fixed;
+    background-size: 100% 100%;
     height: 150vh;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -22,11 +23,17 @@ body {
     padding: 5% 0;
     display: flex;
     flex-direction: column;
-    justify-items: center;
-    align-items: center;
+    /*  justify-items: center;
+    align-items: center;*/
+}
+
+h1,
+h6 {
+    text-align: start;
 }
 
 h1 {
+    width: 100%;
     color: var(--white);
     font-weight: bold;
     font-size: 50px;
@@ -34,13 +41,15 @@ h1 {
 }
 
 h6 {
+    width: 70%;
     color: var(--light-grey);
     font-size: 40px;
     font-weight: 400;
-    margin: 10%;
+    margin: 5% 5% 12% 2%;
 }
 
 .startBtn {
+    width: 250px;
     color: var(--pink-lace);
     font-size: 40px;
     text-align: center;
@@ -48,6 +57,7 @@ h6 {
     padding: 12px 30px;
     border-radius: 50px;
     border: 5px var(--pink-lace) solid;
+    margin: auto;
 }
 
 .startBtn:hover {
