--- a/Style.css
+++ b/Style.css
@@ -11,9 +11,8 @@
 }
 
 body {
-    background: url('./bg.png') fixed;
+    background: url('./cold\ bg.png') fixed;
     background-size: 100% 100%;
-    height: 150vh;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -23,13 +22,13 @@ body {
     padding: 5% 0;
     display: flex;
     flex-direction: column;
-    /*  justify-items: center;
-    align-items: center;*/
+    overflow-x: hidden;
 }
 
 h1,
 h6 {
     text-align: start;
+    position: relative;
 }
 
 h1 {
@@ -49,6 +48,7 @@ h6 {
 }
 
 .startBtn {
+    position: relative;
     width: 250px;
     color: var(--pink-lace);
     font-size: 40px;
@@ -66,4 +66,39 @@ h6 {
 
 .startBtn:active {
     background: rgba(255, 207, 250, 0.255);
+}
+
+.main {
+    width: 70%;
+    margin: auto;
+    border-radius: 50px;
+    background: rgba(216, 182, 227, 0.527);
+    padding: 5% 3%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    transform: translateY(-55%);
+}
+
+.Word {
+    width: 90%;
+    font-weight: 700;
+    padding: 1.5% 3%;
+    border-radius: 50px;
+    background: var(--pink-lavender);
+    border: none;
+    font-size: 1.1rem;
+    font-weight: 700;
+    color: white;
+}
+
+.Word::placeholder {
+    color: var(--light-grey);
+    font-weight: 500;
+}
+
+img {
+    width: 90%;
+    height: 90%;
 }
